--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ defusedxml==0.7.1
 entrypoints==0.3
 et-xmlfile==1.1.0
 idna==3.2
-ipykernel==6.3.1
-ipython==7.27.0
+ipykernel
+ipython
 ipython-genutils==0.2.0
 Jinja2==3.0.1
 jsonschema==3.2.0
@@ -25,14 +25,14 @@ MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
 nbclient==0.5.4
-nbconvert==6.1.0
+nbconvert
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.4.3
-numpy==1.21.2
+numpy
 openpyxl==3.0.7
 packaging==21.0
-pandas==1.3.2
+pandas
 pandocfilters==1.4.3
 parso==0.8.2
 pickleshare==0.7.5
@@ -56,7 +56,7 @@ terminado==0.11.1
 testpath==0.5.0
 tornado==6.1
 tqdm==4.62.2
-traitlets==5.1.0
+traitlets
 urllib3==1.26.6
 wcwidth==0.2.5
 webencodings==0.5.1
